--- a/gia-app/src/main/resources/application-dev.yml
+++ b/gia-app/src/main/resources/application-dev.yml
@@ -4,27 +4,21 @@ logging:
       springframework:
         security: debug
 
-#全局datasource配置,默认使用h2数据库
 spring:
-  datasource:                            #初始化sql配置
+  datasource:
     initialization-mode: always
-    continue-on-error: false                        #在初始化数据库时，遇到错误是否继续，默认false
-    driverClassName: org.h2.Driver
-    url: jdbc:h2:~/db/diamondgia
-    platform: h2
-    username: sa
-    password: sa
-    data: "classpath:/init/h2data.sql"      #初始化sql配置
-    schema: "classpath:/init/h2schema.sql"  #初始化sql配置
-    sql-script-encoding: UTF-8
-  h2:
-    console:
-      settings:
-        web-allow-others: true #生产环境设置为false，关闭控制台
-      path: /h2-console
-      enabled: true #生产环境设置为false，关闭控制台
+    continue-on-error: false                   #在初始化数据库时，遇到错误是否继续，默认false
+    data: "classpath:/init/mysqldata.sql"      #初始化sql配置
+    schema: "classpath:/init/mysqlschema.sql"  #初始化sql配置,使用mybatis时候可以打开,
+---
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/diamond_oauth3?serverTimezone=GMT%2B8&amp&useUnicode=true&characterEncoding=utf-8&useSSL=false
+    username: root
+    password: admin
+    driver-class-name: com.mysql.jdbc.Driver
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
       ddl-auto: none #禁用JPA建表，从而兼容mybatis和jpa。统一使用schema.sql
     show-sql: true
